--- a/ESAME_HEURISTIC.ipynb
+++ b/ESAME_HEURISTIC.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE = \"./TEST_SETS/test_1.txt\""
+    "FILE = \"./TEST_SETS/test_3.txt\""
    ]
   },
   {
@@ -954,80 +954,182 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial cost: 469464.0\n",
+      "Initial cost: 598040.0\n",
       "\n",
       "-----------------------------------\n",
       "\n",
       "Using license file C:\\Users\\gabriele\\gurobi.lic\n",
       "Academic license - for non-commercial use only\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
-      "Optimize a model with 27 rows, 1295 columns and 5677 nonzeros\n",
-      "Model fingerprint: 0xe5cf85f3\n",
-      "Variable types: 0 continuous, 1295 integer (1295 binary)\n",
+      "Optimize a model with 34 rows, 2156 columns and 10934 nonzeros\n",
+      "Model fingerprint: 0xbae0e833\n",
+      "Variable types: 0 continuous, 2156 integer (2156 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [1e+05, 1e+05]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve removed 0 rows and 154 columns\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 27 rows, 1141 columns, 5523 nonzeros\n",
-      "Variable types: 0 continuous, 1141 integer (1141 binary)\n",
+      "Presolve removed 0 rows and 203 columns\n",
+      "Presolve time: 0.04s\n",
+      "Presolved: 34 rows, 1953 columns, 10731 nonzeros\n",
+      "Variable types: 0 continuous, 1953 integer (1953 binary)\n",
       "\n",
-      "Root relaxation: objective 4.558060e+05, 34 iterations, 0.00 seconds\n",
+      "Root relaxation: objective 5.874240e+05, 135 iterations, 0.01 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "*    0     0               0    455806.00000 455806.000  0.00%     -    0s\n",
+      "     0     0 587424.000    0    8          - 587424.000      -     -    0s\n",
+      "H    0     0                    587424.00000 587424.000  0.00%     -    0s\n",
+      "     0     0 587424.000    0    8 587424.000 587424.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (34 simplex iterations) in 0.05 seconds\n",
+      "Explored 1 nodes (135 simplex iterations) in 0.12 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 455806 \n",
+      "Solution count 1: 587424 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 4.558060000000e+05, best bound 4.558060000000e+05, gap 0.0000%\n",
+      "Best objective 5.874240000000e+05, best bound 5.874240000000e+05, gap 0.0000%\n",
       "\n",
-      "Previous cost: 469464.0, current cost: 455806.0\n",
+      "Previous cost: 598040.0, current cost: 587424.0\n",
       "\n",
       "---------------------------------------------\n",
       "\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
-      "Optimize a model with 27 rows, 2044 columns and 9401 nonzeros\n",
-      "Model fingerprint: 0x9f63c4ab\n",
-      "Variable types: 0 continuous, 2044 integer (2044 binary)\n",
+      "Optimize a model with 34 rows, 2723 columns and 13006 nonzeros\n",
+      "Model fingerprint: 0xd36acb4d\n",
+      "Variable types: 0 continuous, 2723 integer (2723 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [1e+05, 1e+05]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
-      "Found heuristic solution: objective 785436.00000\n",
-      "Presolve removed 0 rows and 154 columns\n",
-      "Presolve time: 0.03s\n",
-      "Presolved: 27 rows, 1890 columns, 9247 nonzeros\n",
-      "Variable types: 0 continuous, 1890 integer (1890 binary)\n",
+      "Presolve removed 0 rows and 203 columns\n",
+      "Presolve time: 0.04s\n",
+      "Presolved: 34 rows, 2520 columns, 12803 nonzeros\n",
+      "Variable types: 0 continuous, 2520 integer (2520 binary)\n",
       "\n",
-      "Root relaxation: objective 4.558060e+05, 58 iterations, 0.00 seconds\n",
+      "Root relaxation: objective 5.813920e+05, 111 iterations, 0.00 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "*    0     0               0    455806.00000 455806.000  0.00%     -    0s\n",
+      "*    0     0               0    581392.00000 581392.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (58 simplex iterations) in 0.06 seconds\n",
+      "Explored 0 nodes (111 simplex iterations) in 0.12 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 2: 455806 785436 \n",
+      "Solution count 1: 581392 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 4.558060000000e+05, best bound 4.558060000000e+05, gap 0.0000%\n",
+      "Best objective 5.813920000000e+05, best bound 5.813920000000e+05, gap 0.0000%\n",
       "\n",
-      "Previous cost: 455806.0, current cost: 455806.0\n",
+      "Previous cost: 587424.0, current cost: 581392.0\n",
       "\n",
       "---------------------------------------------\n",
       "\n",
-      "Execution time: 0.865739\n"
+      "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
+      "Optimize a model with 34 rows, 3430 columns and 16471 nonzeros\n",
+      "Model fingerprint: 0x32cd31d1\n",
+      "Variable types: 0 continuous, 3430 integer (3430 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+05, 1e+05]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "Presolve removed 0 rows and 203 columns\n",
+      "Presolve time: 0.05s\n",
+      "Presolved: 34 rows, 3227 columns, 16268 nonzeros\n",
+      "Variable types: 0 continuous, 3227 integer (3227 binary)\n",
+      "\n",
+      "Root relaxation: objective 5.790320e+05, 85 iterations, 0.00 seconds\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0    579032.00000 579032.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 0 nodes (85 simplex iterations) in 0.12 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 1: 579032 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 5.790320000000e+05, best bound 5.790320000000e+05, gap 0.0000%\n",
+      "\n",
+      "Previous cost: 581392.0, current cost: 579032.0\n",
+      "\n",
+      "---------------------------------------------\n",
+      "\n",
+      "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
+      "Optimize a model with 34 rows, 3045 columns and 15078 nonzeros\n",
+      "Model fingerprint: 0x9fb298be\n",
+      "Variable types: 0 continuous, 3045 integer (3045 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+05, 1e+05]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "Presolve removed 0 rows and 203 columns\n",
+      "Presolve time: 0.05s\n",
+      "Presolved: 34 rows, 2842 columns, 14875 nonzeros\n",
+      "Variable types: 0 continuous, 2842 integer (2842 binary)\n",
+      "\n",
+      "Root relaxation: objective 5.785320e+05, 84 iterations, 0.01 seconds\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0    578532.00000 578532.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 0 nodes (84 simplex iterations) in 0.12 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 1: 578532 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 5.785320000000e+05, best bound 5.785320000000e+05, gap 0.0000%\n",
+      "\n",
+      "Previous cost: 579032.0, current cost: 578532.0\n",
+      "\n",
+      "---------------------------------------------\n",
+      "\n",
+      "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
+      "Optimize a model with 34 rows, 2401 columns and 12460 nonzeros\n",
+      "Model fingerprint: 0x61cc4ce6\n",
+      "Variable types: 0 continuous, 2401 integer (2401 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+05, 1e+05]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "Presolve removed 0 rows and 203 columns\n",
+      "Presolve time: 0.04s\n",
+      "Presolved: 34 rows, 2198 columns, 12257 nonzeros\n",
+      "Variable types: 0 continuous, 2198 integer (2198 binary)\n",
+      "\n",
+      "Root relaxation: objective 5.785320e+05, 91 iterations, 0.00 seconds\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0 578532.000    0    6          - 578532.000      -     -    0s\n",
+      "H    0     0                    578532.00000 578532.000  0.00%     -    0s\n",
+      "     0     0 578532.000    0    6 578532.000 578532.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 1 nodes (91 simplex iterations) in 0.11 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 1: 578532 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 5.785320000000e+05, best bound 5.785320000000e+05, gap 0.0000%\n",
+      "\n",
+      "Previous cost: 578532.0, current cost: 578532.0\n",
+      "\n",
+      "---------------------------------------------\n",
+      "\n",
+      "Execution time: 6.683126\n"
      ]
     }
    ],
@@ -1102,41 +1204,52 @@
       "\n",
       "Agent 1\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
-      "0       13            0.0      1200.0        2400.0        3600.0           0.0       1200.0\n",
-      "1        8          453.0      4600.0        2400.0        7000.0           0.0        547.0\n",
-      "2       19          798.0      9000.0        2400.0       11400.0           0.0       1202.0\n",
-      "3        5          361.0     11900.0        2400.0       14300.0           0.0        139.0\n",
-      "4       18          671.0     15243.0        2400.0       17643.0           0.0        272.0\n",
-      "5        2          757.0     20200.0        2400.0       22600.0           1.0          0.0\n",
-      "6   OFFICE          284.0     22884.0        3600.0        3600.0           0.0          0.0\n",
+      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
+      "1       11          446.0      7000.0        2400.0        9400.0           0.0          0.0\n",
+      "2       20          830.0     11142.0        2400.0       13542.0           0.0        912.0\n",
+      "3       24          658.0     14200.0        2400.0       16600.0           0.0          0.0\n",
+      "4   OFFICE          604.0     19004.0        3600.0        3600.0           1.0          0.0\n",
+      "5       25          918.0     25800.0        2400.0       28200.0           0.0          0.0\n",
       "\n",
       "Agent 2\n",
-      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
-      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
-      "1       12          648.0      5700.0        2400.0        8100.0           0.0          0.0\n",
-      "2   OFFICE          648.0      8748.0        3600.0        3600.0           0.0          0.0\n",
-      "3       15          506.0     20800.0        2400.0       23200.0           1.0          0.0\n",
-      "4        9          370.0     24000.0        2400.0       26400.0           0.0        430.0\n",
-      "\n",
-      "Agent 3\n",
       "   POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
       "0        14            0.0       600.0        2400.0        3000.0           0.0        600.0\n",
       "1         7          490.0      4300.0        2400.0        6700.0           0.0        810.0\n",
       "2        17          332.0      9000.0        2400.0       11400.0           0.0       1968.0\n",
-      "3        20          417.0     13040.0        2400.0       15440.0           0.0       1223.0\n",
-      "4        10          228.0     15668.0        2400.0       18068.0           0.0          0.0\n",
+      "3         3          186.0     12600.0        2400.0       15000.0           0.0       1014.0\n",
+      "4        10          374.0     15668.0        2400.0       18068.0           0.0        294.0\n",
       "5        16          732.0     20600.0        2400.0       23000.0           1.0          0.0\n",
       "6         6          714.0     24400.0        2400.0       26800.0           0.0        686.0\n",
+      "\n",
+      "Agent 3\n",
+      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
+      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
+      "1       12          648.0      5700.0        2400.0        8100.0           0.0          0.0\n",
+      "2   OFFICE          648.0      8748.0        3600.0        3600.0           0.0          0.0\n",
+      "3       22          594.0     13000.0        2400.0       15400.0           0.0          0.0\n",
+      "4   OFFICE          594.0     17794.0        3600.0        3600.0           1.0          0.0\n",
+      "5        4          546.0     23000.0        2400.0       25400.0           0.0          0.0\n",
+      "6        1          144.0     25800.0        2400.0       28200.0           0.0        256.0\n",
       "\n",
       "Agent 4\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
       "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
-      "1       11          446.0      7000.0        2400.0        9400.0           0.0          0.0\n",
-      "2        3          386.0     10600.0        2400.0       13000.0           0.0        814.0\n",
-      "3   OFFICE          825.0     13825.0        3600.0        3600.0           0.0          0.0\n",
-      "4   OFFICE            0.0     16200.0        3600.0        3600.0           1.0          0.0\n",
-      "5        4          546.0     23000.0        2400.0       25400.0           0.0          0.0\n",
-      "6        1          144.0     25800.0        2400.0       28200.0           0.0        256.0\n"
+      "1       21          514.0      5000.0        2400.0        7400.0           0.0          0.0\n",
+      "2       19          648.0      9000.0        2400.0       11400.0           0.0        952.0\n",
+      "3        5          361.0     11900.0        2400.0       14300.0           0.0        139.0\n",
+      "4       18          671.0     16000.0        2400.0       18400.0           0.0       1029.0\n",
+      "5       15          495.0     20800.0        2400.0       23200.0           1.0        105.0\n",
+      "6       26          136.0     23500.0        2400.0       25900.0           0.0        164.0\n",
+      "\n",
+      "Agent 5\n",
+      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
+      "0       13            0.0      1200.0        2400.0        3600.0           0.0       1200.0\n",
+      "1        8          453.0      4600.0        2400.0        7000.0           0.0        547.0\n",
+      "2        2          208.0      9400.0        2400.0       11800.0           0.0       2192.0\n",
+      "3        9          630.0     13000.0        2400.0       15400.0           0.0        570.0\n",
+      "4   OFFICE          845.0     18045.0        3600.0        3600.0           1.0          0.0\n",
+      "5       23          909.0     23600.0        2400.0       26000.0           0.0          0.0\n",
+      "6       27           71.0     26300.0        2400.0       28700.0           0.0        229.0\n"
      ]
     }
    ],
