--- a/ESAME_HEURISTIC.ipynb
+++ b/ESAME_HEURISTIC.ipynb
@@ -388,7 +388,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Useful functions for the model\n",
+    "## Schedule generation\n",
+    "\n",
+    "Each iteration provides a new set of schedules using the current solution.\n",
+    "Schedules are generated from a set of meet that each agent in the solution serves, and these sets are generated using a swap technique.\n",
+    "\n",
+    "Initialy we have a list of meet, and each one is placed during the day to it's meet time.\n",
+    "We have to fullfill empty time slices with other actions that an agent can do.\n",
+    "Beetwen two meets, an agent can go directy to the next meet, fullfilling the time with a travel action followed by\n",
+    "a wait, but if there is enought time to travel back to the office, spending at least 1 hour to do effective work and\n",
+    "travelling to next meet, then the empty time is fullfilled with these actions, avoiding wait time that can be considered as a waste of time.\n",
+    "\n",
+    "We also have to consider the lunch: beetween each meet pair, if the previous meet end or the next meet start are placed in the lunch interval, lunch is placed after (or before) the meet, and the residual time is fullfilled as described before.\n",
+    "If lunch cannot be placed for time constraints, the schedule is considered as not feasible and is rejected as a candidate for the next iteration.\n",
+    "\n",
+    "When the schedule is generated, an optimizion is done moving the time windows that each meet has to decrease wait times and increase office work, simply moving each meet as far as it can."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Useful functions for the model\n",
     "\n",
     "#### Sort nodes\n",
     "Given a list of meets (as integers) sorts it using the start time of each meet.\n",
@@ -970,11 +991,11 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 0 rows and 203 columns\n",
-      "Presolve time: 0.06s\n",
+      "Presolve time: 0.03s\n",
       "Presolved: 34 rows, 1953 columns, 10731 nonzeros\n",
       "Variable types: 0 continuous, 1953 integer (1953 binary)\n",
       "\n",
-      "Root relaxation: objective 5.874240e+05, 135 iterations, 0.02 seconds\n",
+      "Root relaxation: objective 5.874240e+05, 135 iterations, 0.01 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
@@ -983,7 +1004,7 @@
       "H    0     0                    587424.00000 587424.000  0.00%     -    0s\n",
       "     0     0 587424.000    0    8 587424.000 587424.000  0.00%     -    0s\n",
       "\n",
-      "Explored 1 nodes (135 simplex iterations) in 0.18 seconds\n",
+      "Explored 1 nodes (135 simplex iterations) in 0.11 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 587424 \n",
@@ -1005,7 +1026,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 0 rows and 203 columns\n",
-      "Presolve time: 0.04s\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 34 rows, 2520 columns, 12803 nonzeros\n",
       "Variable types: 0 continuous, 2520 integer (2520 binary)\n",
       "\n",
@@ -1016,7 +1037,7 @@
       "\n",
       "*    0     0               0    581392.00000 581392.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (111 simplex iterations) in 0.11 seconds\n",
+      "Explored 0 nodes (111 simplex iterations) in 0.10 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 581392 \n",
@@ -1042,14 +1063,14 @@
       "Presolved: 34 rows, 3227 columns, 16268 nonzeros\n",
       "Variable types: 0 continuous, 3227 integer (3227 binary)\n",
       "\n",
-      "Root relaxation: objective 5.790320e+05, 85 iterations, 0.01 seconds\n",
+      "Root relaxation: objective 5.790320e+05, 85 iterations, 0.00 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
       "*    0     0               0    579032.00000 579032.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (85 simplex iterations) in 0.15 seconds\n",
+      "Explored 0 nodes (85 simplex iterations) in 0.11 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 579032 \n",
@@ -1071,18 +1092,18 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 0 rows and 203 columns\n",
-      "Presolve time: 0.06s\n",
+      "Presolve time: 0.04s\n",
       "Presolved: 34 rows, 2842 columns, 14875 nonzeros\n",
       "Variable types: 0 continuous, 2842 integer (2842 binary)\n",
       "\n",
-      "Root relaxation: objective 5.785320e+05, 84 iterations, 0.00 seconds\n",
+      "Root relaxation: objective 5.785320e+05, 84 iterations, 0.01 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
       "*    0     0               0    578532.00000 578532.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (84 simplex iterations) in 0.13 seconds\n",
+      "Explored 0 nodes (84 simplex iterations) in 0.10 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 578532 \n",
@@ -1104,7 +1125,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 0 rows and 203 columns\n",
-      "Presolve time: 0.04s\n",
+      "Presolve time: 0.03s\n",
       "Presolved: 34 rows, 2198 columns, 12257 nonzeros\n",
       "Variable types: 0 continuous, 2198 integer (2198 binary)\n",
       "\n",
@@ -1117,7 +1138,7 @@
       "H    0     0                    578532.00000 578532.000  0.00%     -    0s\n",
       "     0     0 578532.000    0    6 578532.000 578532.000  0.00%     -    0s\n",
       "\n",
-      "Explored 1 nodes (91 simplex iterations) in 0.14 seconds\n",
+      "Explored 1 nodes (91 simplex iterations) in 0.12 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 578532 \n",
@@ -1129,7 +1150,7 @@
       "\n",
       "---------------------------------------------\n",
       "\n",
-      "Execution time: 8.323599\n"
+      "Execution time: 5.47323\n"
      ]
     }
    ],
@@ -1204,11 +1225,11 @@
       "\n",
       "Agent 1\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
-      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
+      "0   OFFICE            0.0         0.0        5554.0        3600.0           0.0          0.0\n",
       "1       11          446.0      7000.0        2400.0        9400.0           0.0          0.0\n",
       "2       20          830.0     11142.0        2400.0       13542.0           0.0        912.0\n",
       "3       24          658.0     14200.0        2400.0       16600.0           0.0          0.0\n",
-      "4   OFFICE          604.0     19004.0        3600.0        3600.0           1.0          0.0\n",
+      "4   OFFICE          604.0     19004.0        4878.0        3600.0           1.0          0.0\n",
       "5       25          918.0     25800.0        2400.0       28200.0           0.0          0.0\n",
       "\n",
       "Agent 2\n",
@@ -1223,17 +1244,17 @@
       "\n",
       "Agent 3\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
-      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
+      "0   OFFICE            0.0         0.0        5052.0        3600.0           0.0          0.0\n",
       "1       12          648.0      5700.0        2400.0        8100.0           0.0          0.0\n",
-      "2   OFFICE          648.0      8748.0        3600.0        3600.0           0.0          0.0\n",
+      "2   OFFICE          648.0      8748.0        3658.0        3600.0           0.0          0.0\n",
       "3       22          594.0     13000.0        2400.0       15400.0           0.0          0.0\n",
-      "4   OFFICE          594.0     17794.0        3600.0        3600.0           1.0          0.0\n",
+      "4   OFFICE          594.0     17794.0        3660.0        3600.0           1.0          0.0\n",
       "5        4          546.0     23000.0        2400.0       25400.0           0.0          0.0\n",
       "6        1          144.0     25800.0        2400.0       28200.0           0.0        256.0\n",
       "\n",
       "Agent 4\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
-      "0   OFFICE            0.0         0.0        3600.0        3600.0           0.0          0.0\n",
+      "0   OFFICE            0.0         0.0        4486.0        3600.0           0.0          0.0\n",
       "1       21          514.0      5000.0        2400.0        7400.0           0.0          0.0\n",
       "2       19          648.0      9000.0        2400.0       11400.0           0.0        952.0\n",
       "3        5          361.0     11900.0        2400.0       14300.0           0.0        139.0\n",
@@ -1247,7 +1268,7 @@
       "1        8          453.0      4600.0        2400.0        7000.0           0.0        547.0\n",
       "2        2          208.0      9400.0        2400.0       11800.0           0.0       2192.0\n",
       "3        9          630.0     13000.0        2400.0       15400.0           0.0        570.0\n",
-      "4   OFFICE          845.0     18045.0        3600.0        3600.0           1.0          0.0\n",
+      "4   OFFICE          845.0     18045.0        3646.0        3600.0           1.0          0.0\n",
       "5       23          909.0     23600.0        2400.0       26000.0           0.0          0.0\n",
       "6       27           71.0     26300.0        2400.0       28700.0           0.0        229.0\n"
      ]
@@ -1266,15 +1287,19 @@
     "for a in scheds.keys():\n",
     "    agent_trip_desc = list()\n",
     "    sched = scheds[a]\n",
+    "    sched.append(('end', WORKING_TIME_RANGE[1], -1))\n",
     "    last_meet_or_office = None\n",
     "    lunch = False\n",
     "    wait = 0.0\n",
+    "    index = 0 #schedule index\n",
     "    for s in sched:\n",
+    "        if s[0] == 'end':\n",
+    "            break\n",
     "        if s[0] == 'meet' or s[0] == 'office':\n",
     "            pos_desc = {\"POSITION\": s[2] if s[2] else 'OFFICE', \n",
     "                        \"COST TO REACH\": distance_matrix[last_meet_or_office][s[2]]*TIME_PER_DISTANCE if not last_meet_or_office == None else 0.,\n",
     "                        \"REACHED AT\": s[1],\n",
-    "                        \"SERVICE TIME\": data_dict[s[2]]['SERVICE'] if s[2] else 3600.0,\n",
+    "                        \"SERVICE TIME\": data_dict[s[2]]['SERVICE'] if s[2] else sched[index+1][1] - s[1],\n",
     "                        #\"REAL S. TIME\": c[prev, v_mod, a].X,\n",
     "                        \"LEAVING TIME\": s[1] + data_dict[s[2]]['SERVICE'] if s[2] else 3600.0,\n",
     "                        \"LUNCH_BEFORE\": 1.0 if lunch else 0.0,\n",
@@ -1292,7 +1317,7 @@
     "            for i, s2 in enumerate(sched):\n",
     "                if s == s2 and not i == len(sched)-1:\n",
     "                    wait = sched[i+1][1] - s[1]\n",
-    "                    \n",
+    "        index = index + 1            \n",
     "    stats.update({a+1: pd.DataFrame(agent_trip_desc)})\n",
     "    \n",
     "    travel_costs = pd.DataFrame(agent_trip_desc).sum(axis=0)[\"COST TO REACH\"]\n",
